@@ -1,4 +1,5 @@
 Changes towards version 0.4:
+- Accept spaces in --contentdir argument. - SvdB
 - Separated and abstracted sound buffer-tagging and trackplayer
   clip/subtitle chaining -Alex
 - Abstracted the recursive mutexes in MixSDL and DCQ code -Michael
